fix: name letter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ header h2 {
 header h1 {
   display: inline;
   font-family: 'Just Another Hand', cursive;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.12em;
   font-size: 2rem;
 }
 
